fix fuseki service error: reason: the .env file was not included into the makefile fix overwriting the existent feature file: solution: filter out the desired/hypothetical target files based on the existent ones
